# webdis

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Dockerfile  Dockerfile.compose  Makefile  README.markdown  README.md  acl.c  acl.h  client.c  client.h  cmd.c  cmd.h  conf.c  conf.h  dishy.c  docker-compose.yml  docker-entrypoint  http.c  http.h  json.c  json.h  nicolasff.pub  pool.c  pool.h  radish.c  server.c  server.h  slog.c  slog.h  turnip.c  turnip.conf  turnip.json  version.h  webdis.c  webdis.json  webdis.json.compose  (+4 more)
.circleci/: config.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  webdis-ci.json
b64/: cencode.c
cmake/: WebdisProjectDependencies.cmake
docs/: README.md  custom-redis-or-webdis-config.md  webdis-docker-content-trust.md  webdis-docker-external-redis.md  webdis-docker-serve-rdb-file.md  webdis-redis-docker-compose-ssl.md  webdis-redis-docker-compose.md
formats/: bson.c  bson.h  common.c  common.h  custom-type.c  custom-type.h  html.c  html.h  json.c  json.h  msgpack.c  msgpack.h  raw.c  raw.h
hiredis/: async.c  hiredis.c
http-parser/: http_parser.h
jansson/src/: .jansson.h.swp
md5/: md5.h
pubsub/: Makefile  test  test.c
src/: acl.c  client.c  client.h  cmd.c  cmd.h  conf.c  conf.h  http.c  http.h  pool.c  server.c  server.h  slog.c  slog.h  version.h  webdis.c  websocket.c  websocket.h  worker.c  worker.h
src/b64/: cencode.c
src/formats/: common.c  common.h  custom-type.c  json.c  json.h  msgpack.c  msgpack.h  raw.c  raw.h
src/hiredis/: dict.c  fmacros.h  hiredis.c  hiredis.h
src/http-parser/: http_parser.c
src/jansson/: WEBDIS-CHANGES.md
src/jansson/src/: dump.c  hashtable.c  hashtable_seed.c  jansson_config.h  jansson_private_config.h  load.c  lookup3.h  utf.c  utf.h
src/md5/: md5.c
tests/: CMakeLists.txt  Makefile  README.tests  basic.py  bench.sh  bglaunch.sh  curl-tests.sh  limits.py  pubsub.c  pubsub.html  requirements.txt  websocket.c  websocket.html  ws-tests.py
